@@ -2030,6 +2030,10 @@ AC_DEFUN(GLIBCPP_CONFIGURE_TESTSUITE, [
   # Export file names for ABI checking.
   baseline_file="${glibcpp_srcdir}/config/abi/${target_alias}/baseline_symbols.txt"
   AC_SUBST(baseline_file)
+
+  # Don't do ABI checking unless native.
+  AM_CONDITIONAL(GLIBCPP_BUILD_ABI_CHECK,
+                 test x"$build" == x"$host" && test -z "$with_cross_host")
 ])
 
 
