@@ -53,5 +53,10 @@ noinst_LIBRARIES = libv3test.a
 libv3test_a_SOURCES = testsuite_hooks.cc
 
 ## Build support utilities.
+## Only build this as native, as need to find startup files and libc to link.
+if GLIBCPP_BUILD_ABI_CHECK
 noinst_PROGRAMS = abi_check
+else
+noinst_PROGRAMS = 
+endif
 abi_check_SOURCES = abi_check.cc
