@@ -1,3 +1,13 @@
+2002-08-22  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* acinclude.m4 (GLIBCPP_CONFIGURE_TESTSUITE): Set
+	GLIBCPP_BUILD_ABI_CHECK based on cross compiling, build, host
+	variables.
+	* aclocal.m4: Regenerate.
+	* testsuite/Makefile.am (noinst_PROGRAMS): Make conditional on
+	native compiling.
+	* testsuite/Makefile.in: Regenerate.
+	
 2002-08-22  Loren J. Rittle <ljrittle@acm.org>
 
 	* testsuite/abi_check.cc: Enhance shell portability.
